# Realtime-BPM

./: .gitignore  .gitmodules  README.md
android/: settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/androidTest/java/com/example/pulsemeter/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/example/pulsemeter/: MainActivity.kt
android/app/src/main/java/com/example/pulsemeter/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/pulsemeter/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
core/: CMakeLists.txt  build_ios_universal.sh  test_main.cpp
core/build-android/: CMakeCache.txt  Makefile  cmake_install.cmake
core/build-android-arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
core/build-ios-sim/: CMakeCache.txt  cmake_install.cmake
core/build-ios-sim/CMakeScripts/: ReRunCMake.make
core/build-ios-sim/bpm_core.xcodeproj/: project.pbxproj
core/include/: bpm_detector.h
core/src/: bpm_detector.cpp
ios/PulseMeter/PulseMeter/: BPMDetector.swift  ContentView.swift  PulseMeter-Bridging-Header.h  PulseMeterApp.swift
ios/PulseMeter/PulseMeter.xcodeproj/: project.pbxproj
ios/PulseMeter/PulseMeter/Audio/: AudioProcessor.swift
ios/PulseMeter/PulseMeterTests/: PulseMeterTests.swift
ios/PulseMeter/PulseMeterUITests/: PulseMeterUITests.swift  PulseMeterUITestsLaunchTests.swift
